# Ref-code-server

./: .env  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  traefik.prod.yml
app/: application.py  ref_code_manager.py
app/core/auth/: auth.py  auth_routers.py  oauth2.py  settings.py  user_db.py
app/db/: db.py  redis.py  settings.py
app/db/alembic/: env.py
app/db/alembic/versions/: 88d7e995fa0f_create_user_table.py  ea66e64959f5_create_oauthaccounts_table.py
app/db/models/: base.py  oauth_account.py  user.py
app/routers/: root.py
app/routers/v1/: root.py  user.py
app/schemas/: user.py
app/tests/: conftest.py  test_user.py
